<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ResetFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autoSizeMaxTextSize="35sp"
        android:autoSizeMinTextSize="20dp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/resetQuestion" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/oui" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/non" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>