<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:minHeight="350dp"
    android:minWidth="320dp"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/receive"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="50dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="DEVEUI: "
            android:gravity="right|center"
            android:singleLine="true" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/sendSpinnerDEVEUI"
            android:layout_weight="2.5" />

        <ProgressBar
            android:id="@+id/indeterminateBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/checkedProgress"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_check_circle"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="50dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="SF"
            android:gravity="right|center"
            android:singleLine="true"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/sendSpinnerSF"
            android:layout_weight="3"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="50dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/numberOfFrame"
            android:gravity="right|center"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/sendNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:singleLine="true"
            android:paddingLeft="15dp"
            android:textColorHint="@color/colorWhite"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="6sp"
            android:autoSizeMaxTextSize="12sp"
            android:autoSizeStepGranularity="0.5sp"
            android:inputType="numberSigned" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="50dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="ADR"
            android:gravity="right|center"
            android:singleLine="true"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"/>
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/sendADR"
            android:layout_weight="1.6" />
    </LinearLayout>


    <Button
        android:id="@+id/sendParameters"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/send"
        android:textAppearance="?android:textAppearanceMedium"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="14sp"
        android:autoSizeStepGranularity="1sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/resetParameters"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/reset"
        android:textAppearance="?android:textAppearanceMedium"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="14sp"
        android:autoSizeStepGranularity="1sp"
        android:textStyle="bold"/>

</LinearLayout>