<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:minHeight="350dp"
    android:minWidth="320dp"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".MainActivity">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="CONFIGURATION"
            android:layout_marginBottom="20dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thresholdMargin"
            android:singleLine="true"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="50dp">

                <EditText
                    android:id="@+id/MarginPerfect"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:paddingLeft="15dp"
                    android:textColorHint="@color/colorWhite"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="6sp"
                    android:autoSizeMaxTextSize="12sp"
                    android:autoSizeStepGranularity="0.5sp"
                    android:hint="Perfect"
                    android:inputType="numberSigned" />

                <EditText
                    android:id="@+id/MarginGood"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:paddingLeft="15dp"
                    android:textColorHint="@color/colorWhite"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="6sp"
                    android:autoSizeMaxTextSize="12sp"
                    android:autoSizeStepGranularity="0.5sp"
                    android:hint="Good"
                    android:inputType="numberSigned" />
                <EditText
                    android:id="@+id/MarginBad"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:paddingLeft="15dp"
                    android:textColorHint="@color/colorWhite"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="6sp"
                    android:autoSizeMaxTextSize="12sp"
                    android:autoSizeStepGranularity="0.5sp"
                    android:hint="Bad"
                    android:inputType="numberSigned" />
        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thresholdRSSI"
            android:singleLine="true"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="50dp">

                <EditText
                    android:id="@+id/RSSIPerfect"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:paddingLeft="15dp"
                    android:textColorHint="@color/colorWhite"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="6sp"
                    android:autoSizeMaxTextSize="12sp"
                    android:autoSizeStepGranularity="0.5sp"
                    android:hint="Perfect"
                    android:inputType="numberSigned" />

                <EditText
                    android:id="@+id/RSSIBad"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:paddingLeft="15dp"
                    android:textColorHint="@color/colorWhite"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="6sp"
                    android:autoSizeMaxTextSize="12sp"
                    android:autoSizeStepGranularity="0.5sp"
                    android:hint="Bad"
                    android:inputType="numberSigned" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thresholdSNR"
            android:singleLine="true"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="50dp">

                <EditText
                    android:id="@+id/SNRPerfect"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:paddingLeft="15dp"
                    android:textColorHint="@color/colorWhite"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="6sp"
                    android:autoSizeMaxTextSize="12sp"
                    android:autoSizeStepGranularity="0.5sp"
                    android:hint="Perfect"
                    android:inputType="numberSigned" />

                <EditText
                    android:id="@+id/SNRBad"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:paddingLeft="15dp"
                    android:textColorHint="@color/colorWhite"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="6sp"
                    android:autoSizeMaxTextSize="12sp"
                    android:autoSizeStepGranularity="0.5sp"
                    android:hint="Bad"
                    android:inputType="numberSigned" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="10dp"
            android:background="@drawable/selector"/>

        <Button
            android:id="@+id/updateConfig"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:text="@string/apply"
            android:textAppearance="?android:textAppearanceMedium"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeStepGranularity="1sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/resetConfig"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:text="@string/reset"
            android:textAppearance="?android:textAppearanceMedium"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeStepGranularity="1sp"
            android:textStyle="bold"/>

</LinearLayout>